# Ellen

./: .gitignore  pyproject.toml  requirements-dev.txt  requirements.txt
installer/: Ellen.iss  Ellen.spec  build_ico.py  ellen_launch.py
src/traffic_intake/: __init__.py  _baked_keys.py.example  chat.py  cli.py  computer_use.py  config.py  documents.py  email_draft.py  extractor.py  first_launch.py  geocode_cache.py  geocoder.py  google_signin.py  kml_export.py  kmz.py  kmz_rediff.py  models.py  mymaps.py  parser.py  qchub.py  runtime_settings.py  trace_log.py  usage_tracker.py
src/traffic_intake/ui/: __init__.py  __main__.py  (+9 more)
tests/: README.md  conftest.py  test_auto_create_data.py  test_duration.py  test_phone_extraction.py  test_planner.py  test_subtype_labels.py  test_validators.py
tools/: Launch App.bat  Run Regression Tests.bat  Save API Key.bat  build_installer.bat  repro_add_locations_tool.py  repro_chat_model_fallback.py  repro_company_match.py  repro_day_picker_cascade.py  repro_day_picker_whitespace_match.py  repro_email_draft_defaults.py  repro_force_close_against_real_qchub_dom.py  repro_group_consolidation.py  repro_mymaps_per_group_layers.py  repro_mymaps_per_layer_import.py  repro_office_variants.py  repro_per_group_kml.py  repro_read_email_body.py  repro_remove_locations_tool.py  repro_set_time_windows_by_kind.py  repro_specific_time_fill.py  repro_study_group_modal_scoping.py  repro_survey_custom_name_validator.py  repro_tube_subtype_grouping.py  repro_tube_time_period.py  repro_udot_full_scope.py  repro_validate_for_qchub.py  write_baked_keys.py
(+33 files in other folders)
